<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/nome"/>
        <EditText
            android:id="@+id/edt_editTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_tag_descricao"
            android:layout_marginBottom="30dp"
            android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cor"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/colorEditTag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/primary"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnExcluirTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:text="@string/apagar"
                android:textSize="12sp"
                android:backgroundTint="@color/destructive"
                android:textColor="@color/white100"/>

            <Button
                android:id="@+id/btnEditTag"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/confirmar"
                android:textColor="@color/white100"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>