<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/NoTagsTagSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tag"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/btnCreateTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_tag"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/WithTagsTagSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txtTagSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tag"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/txtCreateTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/create_tag"
                android:textStyle="bold"
                android:layout_gravity="end"/>
        </LinearLayout>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>